--- a/assets/scss/partials/base/_flexbox.scss
+++ b/assets/scss/partials/base/_flexbox.scss
@@ -1,74 +1,122 @@
 // # Flexbox
 // Flexbox support is full on Chrome, Firefox and Safari (with prefix) and nearly full for IE 10.
+//
+// - With IE10 at least one of the flex children needs to have a width or flex value otherwise the content in those children will not wrap. However, if none of children will collide, no width or flex value is needed.
+//
+// `flex-grow` is not supported by IE10, `justify-content` is the next best thing.
+//
+// Use in Sass with:
+//
+//[c]
+//     .foo {
+//          @include display(flex);
+//          @include flex(1);
+//     }
+//[/c]
+//
+// or the corresponding classes directly in the HTML.
+//
+//[c]
+//     <div class="flex flex-1">item</div>
+//[/c]
 
 
-@mixin flex {
-  display: -webkit-flex; // Safari
-  display: -ms-flexbox; // IE 10
-  display: flex;
+@mixin display($value) {
+  display: -webkit-#{$value};
+  display: -ms-#{$value}box;
+  display: $value;
 }
+
+@mixin flex($num) {
+  -webkit-flex: $num;
+  -ms-flex: $num;
+  flex: $num;
+}
+
+@mixin flex-wrap($value) {
+  -webkit-flex-wrap: $value;
+  -ms-flex-wrap: $value;
+  flex-wrap: $value;
+}
+
+@mixin flex-direction($value) {
+  -webkit-flex-direction: $value;
+  -ms-flex-direction: $value;
+  flex-direction: $value;
+}
+
+@mixin justify-content($value) {
+  -webkit-justify-content: $value;
+  @if ($value == 'space-between') {
+    -ms-flex-pack: justify;
+  } @elseif ($value == 'flex-start') {
+    -ms-flex-pack: start;
+  } @elseif ($value == 'flex-end') {
+    -ms-flex-pack: end;
+  } @else {
+    -ms-flex-pack: $value;
+  }
+  justify-content: $value;
+}
+
+@mixin align-items($value) {
+  -webkit-align-items: $value;
+  @if ($value == 'flex-start') {
+    -ms-flex-align: start;
+  } @elseif ($value == 'flex-end') {
+    -ms-flex-align: end;
+  } @else {
+    -ms-flex-align: $value;
+  }
+  align-items: $value;
+}
+
+// ## Flex classes
 
 .flex {
-  @include flex;
-}
-
-@mixin flex-1 {
-  -webkit-flex: 1; // Safari
-  -ms-flex: 1; // IE 10
-  flex: 1;
+  @include display(flex);
 }
 
 .flex-1 {
-  @include flex-1;
-}
-
-@mixin flex--column {
-  -webkit-flex-direction: column; // Safari
-  -ms-flex-direction: column; // IE 10
-  flex-direction: column;
-}
-
-.flex--column {
-  @include flex--column;
-}
-
-@mixin align-items--center {
-  -webkit-align-items: center; // Safari
-  -ms-flex-align: center; // IE 10
-  align-items: center;
-}
-
-.align-items--center {
-  @include align-items--center;
-}
-
-@mixin flex-wrap--wrap {
-  -webkit-flex-wrap: wrap; // Safari
-  -ms-flex-wrap: wrap; // IE 10
-  flex-wrap: wrap;
+  @include flex(1);
 }
 
 .flex-wrap--wrap {
-  @include flex-wrap--wrap;
+  @include flex-wrap(wrap);
 }
 
-@mixin align-items--flex-end {
-  -webkit-align-items: flex-end; // Safari
-  -ms-flex-align: end; // IE 10
-  align-items: flex-end;
+.flex-wrap--nowrap {
+  @include flex-wrap(nowrap);
 }
 
-.align-items--flex-end {
-  @include align-items--flex-end;
+.flex-direction--column {
+  @include flex-direction(column)
 }
 
-@mixin align-items--flex-start {
-  -webkit-align-items: flex-start; // Safari
-  -ms-flex-align: start; // IE 10
-  align-items: flex-start;
+.justify-content--space-between {
+  @include justify-content(space-between);
+}
+
+.justify-content--center {
+  @include justify-content(center);
+}
+
+.justify-content--flex-start {
+  @include justify-content(flex-start);
+}
+
+.justify-content--flex-end {
+  @include justify-content(flex-end);
+}
+
+.align-items--center {
+  @include align-items(center)
 }
 
 .align-items--flex-start {
-  @include align-items--flex-start;
+  @include align-items(flex-start)
 }
 
+.align-items--flex-end {
+  @include align-items(flex-end)
+}
