--- a/assets/scss/partials/base/_main.scss
+++ b/assets/scss/partials/base/_main.scss
@@ -1,3 +1,7 @@
 body {
-  font: 16px/1.8 Lato, Helvetica, sans;
+  font: 16px/1.7 Lato, Helvetica, sans;
+  color: #555;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: #f9f9f9;
 }
