--- a/assets/scss/partials/base/_headings.scss
+++ b/assets/scss/partials/base/_headings.scss
@@ -4,6 +4,13 @@ h2 {
   margin: 0 0 10px;
 }
 
+@media (max-width: 1000px) {
+  h2{
+    font-size: 26px;
+  }
+}
+
+
 h3 {
   text-transform: uppercase;
   letter-spacing: 1px;
