--- a/assets/scss/partials/base/_headings.scss
+++ b/assets/scss/partials/base/_headings.scss
@@ -2,17 +2,18 @@ h2 {
   font-size: 34px;
   line-height: 1.2;
   margin: 0 0 10px;
-}
 
-@media (max-width: 1000px) {
-  h2{
+  @include respond-max(1000px) {
     font-size: 26px;
   }
 }
-
 
 h3 {
   text-transform: uppercase;
   letter-spacing: 1px;
   font-size: 17px;
+}
+
+.milli {
+  font-size: 14px;
 }
