--- a/assets/scss/partials/base/_mixin.scss
+++ b/assets/scss/partials/base/_mixin.scss
@@ -1,3 +1,4 @@
+// Spacer unit for helper class.
 $spacer-unit: 10px;
 
 @function spacer($value) {
@@ -7,4 +8,11 @@ $spacer-unit: 10px;
   } @else {
     @return $spacer-unit * $value;
   }
+}
+
+// Responds to any specified max-width value in px.
+@mixin respond-max($max-width) {
+    @media only screen and (max-width: #{$max-width}) {
+        @content;
+    }
 }
