--- a/assets/scss/partials/base/_vars.scss
+++ b/assets/scss/partials/base/_vars.scss
@@ -2,3 +2,4 @@ $color--section-1: #df4b50;
 $color--section-2: #238fb2;
 $color--section-3: #80cabf;
 $color--section-4: #f36b21;
+$color--section-5: #df4b50;
