--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,16 +104,17 @@ textarea:focus {
 
 /* line 123, ../scss/partials/base/_reset.scss */
 a {
-  text-decoration: none;
+  color: inherit;
+  text-decoration: underline;
 }
 
-/* line 129, ../scss/partials/base/_reset.scss */
+/* line 130, ../scss/partials/base/_reset.scss */
 a:active,
 a:hover {
   outline: 0;
 }
 
-/* line 138, ../scss/partials/base/_reset.scss */
+/* line 139, ../scss/partials/base/_reset.scss */
 sub,
 sup {
   font-size: 75%;
@@ -122,17 +123,17 @@ sup {
   vertical-align: baseline;
 }
 
-/* line 146, ../scss/partials/base/_reset.scss */
+/* line 147, ../scss/partials/base/_reset.scss */
 sup {
   top: -0.5em;
 }
 
-/* line 150, ../scss/partials/base/_reset.scss */
+/* line 151, ../scss/partials/base/_reset.scss */
 sub {
   bottom: -0.25em;
 }
 
-/* line 154, ../scss/partials/base/_reset.scss */
+/* line 155, ../scss/partials/base/_reset.scss */
 em,
 b,
 strong {
@@ -140,36 +141,36 @@ strong {
   font-weight: 500;
 }
 
-/* line 164, ../scss/partials/base/_reset.scss */
+/* line 165, ../scss/partials/base/_reset.scss */
 fieldset {
   border: 0;
 }
 
-/* line 170, ../scss/partials/base/_reset.scss */
+/* line 171, ../scss/partials/base/_reset.scss */
 textarea {
   vertical-align: top;
 }
 
-/* line 179, ../scss/partials/base/_reset.scss */
+/* line 180, ../scss/partials/base/_reset.scss */
 input[type="search"] {
   -webkit-appearance: textfield;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
 }
 
-/* line 187, ../scss/partials/base/_reset.scss */
+/* line 188, ../scss/partials/base/_reset.scss */
 button[disabled],
 html input[disabled] {
   cursor: default;
 }
 
-/* line 196, ../scss/partials/base/_reset.scss */
+/* line 197, ../scss/partials/base/_reset.scss */
 button,
 select {
   text-transform: none;
 }
 
-/* line 207, ../scss/partials/base/_reset.scss */
+/* line 208, ../scss/partials/base/_reset.scss */
 button,
 input,
 select,
@@ -179,13 +180,13 @@ textarea {
   margin: 0;
 }
 
-/* line 219, ../scss/partials/base/_reset.scss */
+/* line 220, ../scss/partials/base/_reset.scss */
 input[type="search"]::-webkit-search-cancel-button,
 input[type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-/* line 232, ../scss/partials/base/_reset.scss */
+/* line 233, ../scss/partials/base/_reset.scss */
 button,
 html input[type="button"],
 input[type="reset"],
@@ -474,6 +475,7 @@ body {
   font-weight: 700;
   font-size: 14px;
   cursor: pointer;
+  text-decoration: none;
 }
 
 /* line 1, ../scss/partials/objects/_sections.scss */
@@ -559,13 +561,13 @@ body {
   opacity: .2;
 }
 /* line 81, ../scss/partials/objects/_sections.scss */
-#section-3 #faith {
-  background: url(../i/faith.jpg) center center no-repeat;
+#section-3 #sarah {
+  background: url(../i/sarah.jpg) center center no-repeat;
   background-size: cover;
 }
 /* line 86, ../scss/partials/objects/_sections.scss */
-#section-3 #sarah {
-  background: url(../i/sarah.jpg) center center no-repeat;
+#section-3 #faith {
+  background: url(../i/faith.jpg) center center no-repeat;
   background-size: cover;
 }
 /* line 91, ../scss/partials/objects/_sections.scss */
