--- a/assets/scss/partials/base/_reset.scss
+++ b/assets/scss/partials/base/_reset.scss
@@ -121,7 +121,8 @@ textarea:focus {
 // ## Links
 
 a {
-  text-decoration: none;
+  color: inherit;
+  text-decoration: underline;
 }
 
 // Improve readability when focused and also mouse hovered in all browsers.
