--- a/assets/scss/partials/objects/_sections.scss
+++ b/assets/scss/partials/objects/_sections.scss
@@ -83,13 +83,13 @@
     background-size: cover;
   }
 
-  #olivia {
-    background: url(../i/olivia.jpg) center center no-repeat;
+  #faith {
+    background: url(../i/faith.jpg) center center no-repeat;
     background-size: cover;
   }
 
-  #chanti {
-    background: url(../i/chanti.jpg) center center no-repeat;
+  #brad {
+    background: url(../i/brad.jpg) center center no-repeat;
     background-size: cover;
   }
 }
