--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1632,3 +1632,18 @@ body {
 .word-break {
   word-break: break-all !important;
 }
+
+/* Make YouTube Video Responsive */
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
